--- a/app/src/main/res/layout/list_item_book.xml
+++ b/app/src/main/res/layout/list_item_book.xml
@@ -2,28 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_height"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/book_image"
         android:layout_width="80dp"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         android:layout_margin="8dp" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/book_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
             android:textStyle="bold"
             tools:text="Book Title" />
 
@@ -31,7 +33,7 @@
             android:id="@+id/book_author"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             tools:text="Author Name" />
 
         <LinearLayout
@@ -43,7 +45,7 @@
                 android:id="@+id/book_publisher"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="Publisher" />
 
             <TextView
@@ -51,19 +53,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="16dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="2011" />
         </LinearLayout>
     </LinearLayout>
 
-    <ImageButton
+    <ImageView
         android:id="@+id/book_details_button"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="16dp"
-        android:scaleType="center"
-        android:src="@mipmap/ic_launcher"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_info"
         tools:text="Read More" />
 
 
